--- a/_posts/2018-09-27-knn-in-35-lines.md
+++ b/_posts/2018-09-27-knn-in-35-lines.md
@@ -3,14 +3,14 @@ layout: splash
 title: "k-Nearest Neighbors in 35 Lines of Python"
 description:
 date: 2018-09-27
-excerpt: k-Nearest Neighbors sometimes gets a bad rep for being too simple. So I implemented it in as few lines as possible.
-tags: ["automata"]
+excerpt: k-Nearest Neighbors sometimes gets a bad reputation for being too simple. So I implemented it in as few lines as possible.
+tags: ["machine-learning"]
 image:
-  teaser: teaser/automata_teaser.png
+  teaser: teaser/voronoi_teaser.png
   feature: feature/splash2.png
 ---
 
-k-Nearest Neighbors sometimes gets a bad rep for being too simple. So I implemented it in as few lines as possible.
+k-Nearest Neighbors sometimes gets a bad reputation for being too simple. So I implemented it in as few lines as possible.
 
 Download, convert names to integer class labels, and randomly split data into training and test sets.
 
@@ -74,3 +74,7 @@ Sample run:
 13-NN Accuracy: 0.98
 15-NN Accuracy: 0.96
 ```
+
+### Attribution:
+
+The voronoi diagram in the teaser image was generated using [Mathias Westerdahl's voronoi implementation](https://github.com/JCash/voronoi).
