✨ Modifying "splash" so the image title and page title may be controlled separately. Tweaking two posts (latex-automata and knn-in-35-lines) to reflect the new ability to set page titles and splash titles separately. ⬆️ Upgrading dependencies.

--- a/_posts/2018-09-27-knn-in-35-lines.md
+++ b/_posts/2018-09-27-knn-in-35-lines.md
@@ -8,6 +8,7 @@ tags: ["machine-learning"]
 image:
   teaser: teaser/voronoi_teaser.png
   feature: feature/splash2.png
+  text: "k-Nearest Neighbors in 35 Lines of Python"
 ---
 
 k-Nearest Neighbors sometimes gets a bad reputation for being too simple. So I implemented it in as few lines as possible.
