🎨 `/blog/` overhaul, navigation, and new post
Add `/blog/` landing page with a list of blog posts
Add `/blog/` to `_data/footer.yml` and `_data/navigation.yml`
Add category: blog tags to entries in `_posts/`
Add new post: `arduino-temperature-study.md`
Add `images/feature/redboard_feature.jpg`
Add `images/teaser/redboard_teaser.jpg`

This adds redirect links to be backwards-compatible with the
previous blog link system. Blogs can now be viewed from a
dedicated blog page, and a new blog post was added.

--- a/_posts/2018-09-27-knn-in-35-lines.md
+++ b/_posts/2018-09-27-knn-in-35-lines.md
@@ -1,13 +1,16 @@
 ---
-layout: splash
+layout: article
 title: "k-Nearest Neighbors in 35 Lines of Python"
 description:
 date: 2018-09-27
 excerpt: k-Nearest Neighbors sometimes gets a bad reputation for being too simple. So I implemented it in as few lines as possible.
+categories: blog
 tags: ["machine-learning"]
+redirect_from:
+  - /knn-in-35-lines/
 image:
   teaser: teaser/voronoi_teaser.png
-  feature: feature/splash2.png
+  feature: feature/k-nearest_neighbors.png
   text: "k-Nearest Neighbors in 35 Lines of Python"
 ---
 
