✨ Page names, breadcrumbs, and animations
Add new headshot photo (`images/Alexander_Hayes.png`)
Add 404 page
Add better titles to cv, teaching, and home pages
  e.g. "Teaching" -> "Alexander L. Hayes - Teaching"
Add bigger breadcrumb font for easier reading
Add animations to home page and reorganize content

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,1 +1,17 @@
-That's a 404 error.
+---
+layout: archive
+permalink: /404.html
+title: "404 Error"
+share: false
+excerpt: ""
+---
+
+# (404) There's nothing here...
+
+Maybe see some of my recent posts instead?
+
+<div class="tiles">
+{% for post in site.posts limit: 4 %}
+	{% include post-grid.html %}
+{% endfor %}
+</div><!-- /.tiles -->
