--- a/_posts/2018-09-27-knn-in-35-lines.md
+++ b/_posts/2018-09-27-knn-in-35-lines.md
@@ -6,6 +6,7 @@ date: 2018-09-27
 excerpt: k-Nearest Neighbors sometimes gets a bad reputation for being too simple. So I implemented it in as few lines as possible.
 categories: blog
 tags: ["machine-learning"]
+comments: true
 redirect_from:
   - /knn-in-35-lines/
 image:
