--- a/_posts/2018-09-27-knn-in-35-lines.md
+++ b/_posts/2018-09-27-knn-in-35-lines.md
@@ -11,7 +11,7 @@ redirect_from:
   - /knn-in-35-lines/
 image:
   teaser: teaser/voronoi_teaser.png
-  feature: feature/k-nearest_neighbors.png
+  feature: feature/k-nearest_neighbors.jpg
   text: "k-Nearest Neighbors in 35 Lines of Python"
 ---
 
