🚑️ Hotfix `http` -> `https`

--- a/_publications/2021-06-08-quake-gdm.md
+++ b/_publications/2021-06-08-quake-gdm.md
@@ -67,7 +67,7 @@ A longer write-up is available on the [Starling Lab QuaKE project webpage](https
 
 The spotlight was part of the AIME 2021 conference.
 
-<iframe width="560" height="315" src="http://www.youtube.com/embed/-jsgV9vfwak?showinfo=0" frameborder="0" allowfullscreen> </iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/-jsgV9vfwak?showinfo=0" frameborder="0" allowfullscreen> </iframe>
 
 ## Slides
 
